test new color scheme

--- a/_posts/1970-01-02-skills.md
+++ b/_posts/1970-01-02-skills.md
@@ -1,8 +1,8 @@
 ---
-title: "red"
-bg: red 
+title: "Skills"
+bg: ms_publisher
 color: white
-style: left
+style: center
 ---
 
 this is a test string in a test post named red.
